--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ display: block;
 <body class="bg-gray-100 text-gray-800">
 
   <!-- Header Section -->
-  <header class="h-screen flex flex-col justify-center items-center text-white" style="background-image: url('./assets/header-background.png'); background-size: cover; background-position: center;">
+  <header class="h-screen flex flex-col justify-center items-center text-white mb-8" style="background-image: url('./assets/header-background.png'); background-size: cover; background-position: center;">
     <h1 class="text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 51px; left: 69px;">
       Les Petits Plats ©
     </h1>
@@ -116,10 +116,11 @@ display: block;
   </header>
 
  <!-- Filters Section -->
- <div class=" absolute container mx-20 py-4">
+ <div class=" absolute container mx-20 py-4"></div>
   <div class="relative items-start mb-4">
     <!-- Les filtres sont placés côte à côte -->
-    <div class="flex gap-8 ">
+    <div class="flex gap-8 pl-8">
+  
 
       <!-- Filtres dynamiques des ingrédients -->
 <div class="  relative w-52 ml-2 rounded">
@@ -193,11 +194,12 @@ display: block;
   </select>
 </div>
 
+
  <!-- Compteur de recettes -->
  <p id="total-recipes" class="text-black-700 text-2xl font-medium pt-2 pl-96">1500 recettes</p>
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
-    <div id="tag-container" class="ml-2 mt-2 flex flex-wrap gap-2 text-black">
+    <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 text-black">
     </div>
   </div>
 
@@ -216,34 +218,6 @@ display: block;
   <script type="module" src="./script/filtres.js" ></script>
   <script type="module" src="./script/main.js" ></script>
 
-  <script>
-    // Test console logs
-    console.log('Document loaded');
-
-    // Log elements to ensure they are correctly selected
-    const searchInput = document.getElementById('search-input');
-    console.log('Search input element:', searchInput);
-
-    const ingredientsSelect = document.getElementById('ingredients');
-    console.log('Ingredients select element:', ingredientsSelect);
-
-    const appareilsSelect = document.getElementById('appareils');
-    console.log('Appareils select element:', appareilsSelect);
-
-    const ustensilesSelect = document.getElementById('ustensiles');
-    console.log('Ustensiles select element:', ustensilesSelect);
-
-    const mediaContainer = document.getElementById('media-container');
-    console.log('Media container element:', mediaContainer);
-
-    const resultsContainer = document.getElementById('results-container');
-    console.log('Results container element:', resultsContainer);
-
-    const tagContainer = document.getElementById('tag-container');
-    console.log('Tag container element:', tagContainer);
-
-    const errorMessage = document.getElementById('error-message');
-    console.log('Error message element:', errorMessage);
-  </script>
+  
 </body>
 </html>
