fond jaune au click sur élément de liste

--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@ display: block;
   background-color: #f3f4f6;
   }
 
+  .list-itemClick {
+  padding: 10px;
+  cursor: pointer;
+  position: relative; /* Pour le positionnement de la croix */
+}
+
+.selected {
+  background-color: #FFD15B;
+  ; /* Code hexadécimal pour bg-yellow-400 */
+}
+
+.close-icon {
+    margin-left: 8px; /* Un petit espacement */
+    cursor: pointer; /* Pour indiquer que c'est cliquable */
+    font-weight: bold; /* Pour rendre l'icône plus visible */
+}
+
+
+
 </style>
 
 </head>
