Récupération des tags et filtre en temps réel

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ display: block;
   padding-right: 2px;         /* Optionnel : Ajouter un peu de padding pour éviter la superposition avec la scrollbar */
 }
 
-.filter-list-item {
+.li {
   padding: 0.5rem;
   cursor: pointer;
   border-bottom: 1px solid #e5e7eb;
@@ -158,7 +158,7 @@ display: block;
 
       <!-- Filtres dynamiques des ingrédients -->
 <div class="relative w-52 ml-2 rounded">
-  <label for="ingredients" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+  <label for="ingredients-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
     Ingrédients  
     <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
       <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
@@ -180,7 +180,7 @@ display: block;
 
  <!-- Filtres dynamiques des appareils -->
  <div class="relative w-52 ml-2 rounded">
-  <label for="appareils" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+  <label for="appareils-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
     Appareils  
     <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
       <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
@@ -202,7 +202,7 @@ display: block;
 
 <!-- Filtres dynamiques des ustensiles -->
 <div class="relative w-52 ml-2  rounded">
-  <label for="ustensiles" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
     Ustensiles  
     <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
       <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
