--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ display: block;
   </footer>
 
   <!-- Scripts JS -->
-  <script type="module" src="./script/index.js" ></script>
-  <script type="module" src="./script/filtres.js" ></script>
-  <script type="module" src="./script/main.js" ></script>
+  <script type="module" src="./script/index.js" defer ></script>
+  <script type="module" src="./script/filtres.js" defer></script>
+  <script type="module" src="./script/main.js" defer></script>
 
   
 </body>
