Suppression defer et multiple

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ display: block;
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche  " >
   </button>
 </div>
-<ul id="ingredients" class="filter-list hidden rounded mt-2 appearance-none border-none bg-transparent overflow-hidden bg-white" multiple></ul>
+<ul id="ingredients" class="filter-list hidden rounded mt-2 appearance-none border-none bg-transparent overflow-hidden bg-white"></ul>
 </div>
 
 
@@ -182,7 +182,7 @@ display: block;
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
 </div>
-<ul id="appareils" class="filter-list hidden bg-white rounded mt-2 " multiple></ul>
+<ul id="appareils" class="filter-list hidden bg-white rounded mt-2 " ></ul>
 </div>
 
 
@@ -204,7 +204,7 @@ display: block;
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
   </button>
 </div>
-<ul id="ustensiles" class="filter-list hidden bg-white rounded mt-2 " multiple></ul>
+<ul id="ustensiles" class="filter-list hidden bg-white rounded mt-2 "></ul>
 </div>
 
 
@@ -228,9 +228,9 @@ display: block;
   </footer>
 
   <!-- Scripts JS -->
-  <script type="module" src="./script/index.js" defer ></script>
-  <script type="module" src="./script/filtres.js" defer></script>
-  <script type="module" src="./script/main.js" defer></script>
+  <script type="module" src="./script/index.js" ></script>
+  <script type="module" src="./script/filtres.js"></script>
+  <script type="module" src="./script/main.js"></script>
 
   
 </body>
