--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Barre de recherche principale -->
 <div class="relative mt-6 flex w-2/3">
   <input 
-    id="search-input" 
+    id="main-search-input" 
     type="text" 
     placeholder="Rechercher une recette, un ingrédient, ..." 
     class="text-black w-full rounded-l p-4 focus:outline-none focus:placeholder-transparent"
