--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 <body class="bg-gray-100 text-gray-800">
 
   <!-- Header Section -->
-  <header class="h-screen flex flex-col justify-center items-center text-white mb-8" style="background-image: url('./assets/header-background.png'); background: cover; background-position: center;">
+  <header class="h-screen flex flex-col justify-center items-center text-white mb-8" style="background-image: url('./assets/header-background.png'); object-fit:cover; background-position: center;">
     <h1 class="text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 51px; left: 69px;">
       Les Petits Plats ©
     </h1>
-    <h2 class="text-6xl mt-6 flex w-2/3 text-center text-yellow-400">Cherchez parmi plus de 1500 recettes du quotidien, simples et délicieuses</h2>
+    <h2 class="text-4xl font-bold mt-40 flex w-2/3 text-center text-yellow-400">CHERCHEZ PARMI PLUS DE 1500 RECETTES DU QUOTIDIEN,SIMPLES ET DÉLICIEUSES</h2>
 
     <!-- Barre de recherche principale -->
-<div class="relative mt-6 flex w-2/3">
+<div class="relative mt-6 flex w-2/3 h-72px">
   <input 
     id="main-search-input" 
     type="text" 
@@ -91,18 +91,18 @@
 <div class="relative items-start mb-4">
   <div class="flex gap-8 pl-8">
   <!-- Filtres dynamiques des ingrédients -->
-<div class="relative w-52 ml-2 rounded">
-  <label for="ingredients-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+<div class="relative w-44 ml-2 rounded ">
+  <label for="ingredients-search" class=" block  bg-white text-black-500 px-4 py-4 rounded-t cursor-pointer">
   Ingrédients  
-  <span class="arrow ml-20 cursor-pointer transition-transform duration-300 ease"> <!-- Ajoute un espace entre le texte et l'image -->
-    <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+  <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
+    <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="ingredients-input-container" class=" flex w-52 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
+  <div id="ingredients-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="ingredients-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent " autocomplete="off">
   <button id="ingredients-clear-search" class="absolute right-16 top-16 text-gray-400 hidden" aria-label="Effacer la recherche">
-    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise pl-2 pb-4" ><!-- Symbole de la croix -->
+    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise  relative top-5 left-1" ><!-- Symbole de la croix -->
   </button>
   <button class="bg-white text-white relative right-4 border-t border-r border-b rounded border-gray-300 px-2 py-3" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche  " >
@@ -111,18 +111,18 @@
   <ul id="ingredients" class="filter-list hidden rounded mt-2 appearance-none border-none bg-transparent overflow-hidden bg-white" ></ul>
 </div>
 <!-- Filtres dynamiques des appareils -->
-<div class="relative w-52 ml-2 rounded">
-  <label for="appareils-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+<div class="relative w-44 ml-2 rounded">
+  <label for="appareils-search" class="relative block  bg-white text-black-500 px-4 py-4 rounded-t cursor-pointer">
   Appareils  
-  <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
-    <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+  <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
+    <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="appareils-input-container" class=" flex w-52 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
+  <div id="appareils-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="appareils-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent" autocomplete="off">
   <button id="appareils-clear-search" class="absolute right-16 top-16 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
-    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise pl-2 pb-4 " ><!-- Symbole de la croix -->
+    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative top-5 left-1 " ><!-- Symbole de la croix -->
   </button>
   <button class="bg-white text-white relative right-4 border-t border-r border-b rounded border-gray-300 px-2 py-3" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
@@ -131,18 +131,18 @@
   <ul id="appareils" class="filter-list hidden bg-white rounded mt-2 " ></ul>
 </div>
 <!-- Filtres dynamiques des ustensiles -->
-<div class="relative w-52 ml-2  rounded">
-  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
+<div class="relative w-44 ml-2 rounded">
+  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-4 py-4 rounded-t cursor-pointer">
   Ustensiles  
-  <span class="arrow ml-20"> <!-- Ajoute un espace entre le texte et l'image -->
-    <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 inline-block"> <!-- Image de la flèche -->
+  <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
+    <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="ustensiles-input-container" class=" flex w-52 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
+  <div id="ustensiles-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="ustensiles-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent" autocomplete="off">
   <button id="ustensiles-clear-search" class="absolute right-16 top-16  text-gray-400 hidden" aria-label="Effacer la recherche">
-    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise pl-2 pb-4" ><!-- Symbole de la croix -->
+    <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative top-5 left-1" ><!-- Symbole de la croix -->
   </button>
   <button class="bg-white text-white relative right-4 border-t border-r border-b rounded border-gray-300 px-2 py-3" aria-label="Rechercher">
     <img src="./assets/loupe-blanche.png" alt="icone d'une loupe" class="loupe-blanche " >
@@ -151,10 +151,10 @@
   <ul id="ustensiles" class="filter-list hidden bg-white rounded mt-2 " ></ul>
 </div>
  <!-- Compteur de recettes -->
-  <p id="total-recipes" class="text-black-700 text-2xl font-medium pt-2 pl-96">1500 recettes</p>
+  <p id="total-recipes" class="text-black-700 text-2xl font-bold pt-2 relative top-2 left-96 ml-40">1500 recettes</p>
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
-  <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 mt-4 text-black">
+  <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 text-black">
   </div>
 </div>
 <!-- Section où les médias seront affichés -->
