--- a/index.html
+++ b/index.html
@@ -50,56 +50,58 @@
 <body class="bg-gray-100 text-gray-800">
 
   <!-- Header Section -->
-  <header class="h-screen flex flex-col justify-center items-center text-white mb-8" style="background-image: url('./assets/header-background.png'); object-fit:cover; background-position: center;">
-    <h1 class="text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 51px; left: 69px;">
+  <header class="flex flex-col justify-center items-center text-white mb-8 min-h-screen bg-cover bg-center" style="background-image: url('./assets/header-background.png');">
+    <h1 class="text-2xl md:text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 20px; left: 5%;">
       Les Petits Plats ©
     </h1>
-    <h2 class="text-4xl font-bold mt-40 flex w-2/3 text-center text-yellow-400">CHERCHEZ PARMI PLUS DE 1500 RECETTES DU QUOTIDIEN,SIMPLES ET DÉLICIEUSES</h2>
-
+    <h2 class="text-lg md:text-4xl font-bold mt-10 flex w-3/4 md:w-2/3 text-center text-yellow-400">
+      CHERCHEZ PARMI PLUS DE 1500 RECETTES DU QUOTIDIEN, SIMPLES ET DÉLICIEUSES
+    </h2>
+  
     <!-- Barre de recherche principale -->
-<div class="relative mt-6 flex w-2/3 h-72px">
-  <input 
-    id="main-search-input" 
-    type="text" 
-    placeholder="Rechercher une recette, un ingrédient, ..." 
-    class="text-black w-full rounded-l p-4 focus:outline-none focus:placeholder-transparent"
-  >
-  <button id="main-clear-search" class="absolute right-14 top-2  text-gray-400 hidden" aria-label="Effacer la recherche">
-    <img src="./assets/croiix-grise-ppale.png" alt="Icône d'une croix" class="w-4 h-4">
-  </button>
-  <button class="absolute w-10 h-10 mt-2 right-2" aria-label="Rechercher">
-    <!-- Image par défaut -->
-    <img src="./assets/loupe.png" alt="Icône d'une loupe" class="w-full h-full object-cover img-default absolute inset-0">
-    
-    <!-- Image au survol (hover) -->
-    <img src="./assets/loupe-jaune.png" alt="Image au survol" class="w-full h-full object-cover img-hover absolute inset-0 hidden">
-  </button>  
-</div>
-
-<!-- Conteneur pour le message d'erreur -->
-<div id="error-message" class="hidden mt-4 w-full text-center text-red-500">
-  Aucune recette trouvée.
-</div>
-
-<!-- Conteneur pour les résultats de recherche -->
-<div id="results-container" class="mt-4 w-full flex flex-wrap justify-center">
+    <div class="relative mt-6 flex w-3/4 md:w-2/3 h-14">
+      <input 
+        id="main-search-input" 
+        type="text" 
+        placeholder="Rechercher une recette, un ingrédient, ..." 
+        class="text-black w-full rounded-l p-4 focus:outline-none focus:placeholder-transparent"
+      >
+      <button id="main-clear-search" class="absolute right-14 top-2 text-gray-400 hidden" aria-label="Effacer la recherche">
+        <img src="./assets/croiix-grise-ppale.png" alt="Icône d'une croix" class="w-4 h-4">
+      </button>
+      <button class="absolute w-10 h-10 mt-2 right-2" aria-label="Rechercher">
+        <!-- Image par défaut -->
+        <img src="./assets/loupe.png" alt="Icône d'une loupe" class="w-full h-full object-cover img-default absolute inset-0">
+        
+        <!-- Image au survol (hover) -->
+        <img src="./assets/loupe-jaune.png" alt="Image au survol" class="w-full h-full object-cover img-hover absolute inset-0 hidden">
+      </button>  
+    </div>
+  
+    <!-- Conteneur pour le message d'erreur -->
+    <div id="error-message" class="hidden mt-4 w-full text-center text-red-500">
+      Aucune recette trouvée.
+    </div>
+  
+    <!-- Conteneur pour les résultats de recherche -->
+    <div id="results-container" class="mt-4 w-full flex flex-wrap justify-center">
       <!-- Les résultats injectés dynamiquement ici -->
-</div>
-</header>
-
+    </div>
+  </header>
+  
 <!-- Filters Section -->
-<div class="relative items-start mb-4">
-  <div class="flex gap-8 pl-8">
+<div class="relative items-start mb-2 h-22 z-10">
+  <div class="flex gap-8 pl-8 mb-2 h-10 z-10">
   <!-- Filtres dynamiques des ingrédients -->
-<div class="relative w-44 ml-2 rounded ">
-  <label for="ingredients-search" class=" block  bg-white text-black-500 px-4 py-4 rounded-t cursor-pointer">
+<div class="relative w-40 ml-2 rounded ">
+  <label for="ingredients-search" class=" block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
   Ingrédients  
   <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
     <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="ingredients-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
+  <div id="ingredients-input-container" class=" flex w-40 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="ingredients-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent " autocomplete="off">
   <button id="ingredients-clear-search" class="absolute right-16 top-16 text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise  relative top-5 left-1" ><!-- Symbole de la croix -->
@@ -111,15 +113,15 @@
   <ul id="ingredients" class="filter-list hidden rounded mt-2 appearance-none border-none bg-transparent overflow-hidden bg-white" ></ul>
 </div>
 <!-- Filtres dynamiques des appareils -->
-<div class="relative w-44 ml-2 rounded">
-  <label for="appareils-search" class="relative block  bg-white text-black-500 px-4 py-4 rounded-t cursor-pointer">
+<div class="relative w-40 ml-2 rounded">
+  <label for="appareils-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
   Appareils  
   <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
     <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="appareils-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
+  <div id="appareils-input-container" class=" flex w-40 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="appareils-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent" autocomplete="off">
   <button id="appareils-clear-search" class="absolute right-16 top-16 pb-2  text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative top-5 left-1 " ><!-- Symbole de la croix -->
@@ -131,15 +133,15 @@
   <ul id="appareils" class="filter-list hidden bg-white rounded mt-2 " ></ul>
 </div>
 <!-- Filtres dynamiques des ustensiles -->
-<div class="relative w-44 ml-2 rounded">
-  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-4 py-4 rounded-t cursor-pointer">
+<div class="relative w-40 ml-2 rounded">
+  <label for="ustensiles-search" class="relative block  bg-white text-black-500 px-2 py-2 rounded-t cursor-pointer">
   Ustensiles  
   <span class="arrow "> <!-- Ajoute un espace entre le texte et l'image -->
     <img src="./assets/flèche-descendante.png" alt="Flèche vers le bas" class="w-4 h-4 ml-10 inline-block"> <!-- Image de la flèche -->
   </span>
   </label>
   <!-- Conteneur pour l'input et la loupe -->
-  <div id="ustensiles-input-container" class=" flex w-44 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
+  <div id="ustensiles-input-container" class=" flex w-40 p-2 bg-white opacity-0 pointer-events-none transition-opacity duration-300">
   <input id="ustensiles-search" type="text" placeholder="Rechercher" class="search-input w-full pl-4 rounded border border-gray-300 placeholder-gray-300 placeholder-opacity-50 focus:outline-none focus:border-gray-300 focus:ring-0 focus:inset-1 focus:placeholder-transparent" autocomplete="off">
   <button id="ustensiles-clear-search" class="absolute right-16 top-16  text-gray-400 hidden" aria-label="Effacer la recherche">
     <img src="./assets/croix-grise.png" alt="icone d'une croix" class="croix-grise relative top-5 left-1" ><!-- Symbole de la croix -->
@@ -151,10 +153,11 @@
   <ul id="ustensiles" class="filter-list hidden bg-white rounded mt-2 " ></ul>
 </div>
  <!-- Compteur de recettes -->
-  <p id="total-recipes" class="text-black-700 text-2xl font-bold pt-2 relative top-2 left-96 ml-40">1500 recettes</p>
+<p id="total-recipes" class="text-black-700 text-2xl font-bold pt-2 relative top-2 mx-auto md:ml-20 lg:ml-40">1500 recettes</p>
+
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
-  <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 text-black">
+  <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 text-black z-20">
   </div>
 </div>
 <!-- Section où les médias seront affichés -->
