--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- Header Section -->
   <header class="flex flex-col justify-center items-center text-white mb-8 min-h-screen bg-cover bg-center" style="background-image: url('./assets/header-background.png');">
-    <h1 class="text-2xl md:text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 20px; left: 5%;">
+    <h1 class="text-xl md:text-4xl font-bold absolute p-0 gap-0 opacity-1 transition ease-out duration-300" style="top: 20px; left: 5%;">
       Les Petits Plats ©
     </h1>
     <h2 class="text-lg md:text-4xl font-bold mt-10 flex w-3/4 md:w-2/3 text-center text-yellow-400">
