--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <ul id="ustensiles" class="filter-list hidden bg-white rounded mt-2 " ></ul>
 </div>
  <!-- Compteur de recettes -->
-<p id="total-recipes" class="text-black-700 text-2xl font-bold pt-2 relative top-2 mx-auto md:ml-20 lg:ml-40">1500 recettes</p>
+<p id="total-recipes" class="text-black-700 text-xl font-bold pt-2 relative top-1 mx-auto md:ml-20 lg:ml-40">1500 recettes</p>
 
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
