tag-container annule z-20

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 </div>
  <!-- Conteneur pour les tags sélectionnés -->
-  <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 text-black z-20">
+  <div id="tag-container" class="ml-10 pb-8 flex flex-wrap gap-2 text-black">
   </div>
 </div>
 <!-- Section où les médias seront affichés -->
